--- a/formKaryawan.html
+++ b/formKaryawan.html
@@ -63,7 +63,21 @@
             </td>
             <td>
                 &emsp;
-                <input type="numeric" style="width: 4em;" maxlength="4">
+                <select name="kode-area" id="form-telpon" style="width: 4em; height: 1.6em;">
+                    <option disabled selected value></option>
+                    <option>+62</option>
+                    <option>+60</option>
+                    <option>+65</option>
+                    <option>+673</option>
+                    <option>+84</option>
+                    <option>+855</option>
+                    <option>+66</option>
+                    <option>+63</option>
+                    <option>+95</option>
+                    <option>+856</option>
+                    <option>+670</option>
+                    <option>+675</option>
+                </select>
                 <label>-</label>
                 <input type="numeric" style="width: 15em;">
             </td>
@@ -156,11 +170,11 @@
             </td>
             <td>
                 &emsp;
-                <input type="numeric" style="width: 4em;" maxlength="2">
+                <input type="numeric" style="width: 2em;" maxlength="2">
                 <label>-</label>
-                <input type="numeric" style="width: 4em;" maxlength="2">
+                <input type="numeric" style="width: 2em;" maxlength="2">
                 <label>-</label>
-                <input type="numeric" style="width: 8em;" maxlength="4">
+                <input type="numeric" style="width: 4em;" maxlength="4">
             </td>
             </label>
         </li>
@@ -206,11 +220,11 @@
                 &emsp;
                 <input type="text" maxlength="50">
                 <label>/</label>
-                <input type="numeric" style="width: 4em;" maxlength="2">
+                <input type="numeric" style="width: 2em;" maxlength="2">
                 <label>-</label>
-                <input type="numeric" style="width: 4em;" maxlength="2">
+                <input type="numeric" style="width: 2em;" maxlength="2">
                 <label>-</label>
-                <input type="numeric" style="width: 8em;" maxlength="4">
+                <input type="numeric" style="width: 4em;" maxlength="4">
             </td>
             </label>
         </li>
@@ -262,11 +276,11 @@
             </td>
             <td>
                 &emsp;
-                <input type="numeric" style="width: 4em;" maxlength="2">
+                <input type="numeric" style="width: 2em;" maxlength="2">
                 <label>-</label>
-                <input type="numeric" style="width: 4em;" maxlength="2">
+                <input type="numeric" style="width: 2em;" maxlength="2">
                 <label>-</label>
-                <input type="numeric" style="width: 8em;" maxlength="4">
+                <input type="numeric" style="width: 4em;" maxlength="4">
             </td>
             </label>
         </li>
@@ -302,11 +316,21 @@
             </label>
         </li>
         </tr>
+        <tr>
+        <td>
+            <li>
+            </td>
+            <td>
+                <br>
+                &emsp;
+                <input type="submit" value="Kirim" style="width: 5em;">
+                &ensp;
+                <input type="reset" value="Reset" style="width: 5em;">
+            </td>
+            </li>
+        </tr>
     </table>
     </ul>
-    <br>
-    <input type="submit" value="Kirim">
-    <input type="reset" value="Reset">
     </fieldset>
     </form>
     </body>
