--- a/formKaryawan.html
+++ b/formKaryawan.html
@@ -4,6 +4,9 @@
         <style>
             textarea {
                 overflow-y: scroll;
+                width: 60em; 
+                resize: none;
+                font-family: system-ui;
             }
         </style>
     </head>
@@ -50,7 +53,7 @@
             </td>
             <td>
                 &emsp;
-                <textarea style="width: 60em; resize: none;" name="Alamat Karyawan" id="form-alamat" rows="5"></textarea>
+                <textarea name="Alamat Karyawan" id="form-alamat" rows="5"></textarea>
             </td>
             </label>
         </li>
@@ -293,7 +296,7 @@
             </td>
             <td>
                 &emsp;
-                <textarea style="width: 60em; resize: none;" name="Alasan Keluar" id="form-alasan" rows="5"></textarea>
+                <textarea name="Alasan Keluar" id="form-alasan" rows="5"></textarea>
             </td>
             </label>
         </li>
